default/objects/E2E_Data_Contact__c/E2E_Data_Contact__c.object-meta.xml
<CustomObject>
    <label>E2E Data Contact</label>
    <nameField>
        <label>E2E Data Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E2E Data Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>