default/objects/E2E_Data_Contact__c/fields/Fleetcor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Fleetcor_Contact__c</fullName>
    <label>Fleetcor Contact</label>
    <length>21</length>
    <type>Text</type>
</CustomField>