default/objects/E2E_Data_Contact__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>