default/objects/E2E_Data_Contact__c/fields/isPrimary__c.field-meta.xml
<CustomField>
    <fullName>isPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPrimary</label>
    <type>Checkbox</type>
</CustomField>