default/objects/E2E_Data_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorised signatory</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>